--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,7 @@
     "name": "qingfengai/qingfeng-time",
     "type": "library",
     "require": {
-        "php": ">=7.1.0",
-        "topthink/framework": "^6.0.0"
+        "php": ">=7.1.0"
     },
     "license": "Apache-2.0",
     "autoload": {
